--- a/demo/appsettings.json
+++ b/demo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Database=Test;User Id=sa;Password=192Gether@;Connection Timeout=30;Pooling=true;Min Pool Size=100;TrustServerCertificate=True"
+  }
 }
